force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>GC1040</fullName><default>false</default><label>GC1040</label></value>
            <value><fullName>GC1060</fullName><default>false</default><label>GC1060</label></value>
            <value><fullName>GC3020</fullName><default>false</default><label>GC3020</label></value>
            <value><fullName>GC3040</fullName><default>false</default><label>GC3040</label></value>
            <value><fullName>GC3060</fullName><default>false</default><label>GC3060</label></value>
            <value><fullName>GC5020</fullName><default>false</default><label>GC5020</label></value>
            <value><fullName>GC5040</fullName><default>false</default><label>GC5040</label></value>
            <value><fullName>GC5060</fullName><default>false</default><label>GC5060</label></value>
            <value><fullName>GC1020</fullName><default>false</default><label>GC1020</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>