force-app/main/default/objects/Case/fields/SLAViolation__c.field-meta.xml
<CustomField>
    <fullName>SLAViolation__c</fullName>
    <label>SLA Violation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>